# clang-tidy-gjb8114

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Gemfile  README.md  Rakefile  cucumber.yml
lib/: CMakeLists.txt  Module.h  Registry.cpp
lib/common/: CMakeLists.txt
lib/common/branch/: BoolSwitchCheck.cpp  BoolSwitchCheck.h  CMakeLists.txt  CaseLevelCheck.h  CaseLevelRangeCheck.cpp  DefaultOnlySwitchCheck.cpp  DefaultOnlySwitchCheck.h  EmptyBranchCommentCheck.cpp  EmptyBranchCommentCheck.h  EmptySwitchCheck.cpp  EmptySwitchCheck.h  IfElseIfBranchCheck.cpp  IfElseIfBranchCheck.h  SwitchCaseBreakCheck.cpp  SwitchCaseBreakCheck.h  SwitchDefaultCheck.cpp  SwitchDefaultCheck.h
lib/common/cast/: CMakeLists.txt  DoubleToFloatAssignCheck.cpp  DoubleToFloatAssignCheck.h  FloatToIntVarAssignCheck.cpp  FloatToIntVarAssignCheck.h  LongToShortIntAssignCheck.cpp  LongToShortIntAssignCheck.h  PointerAssignTypeCheck.cpp  PointerAssignTypeCheck.h  PointerNonPointerAssignCheck.cpp  PointerNonPointerAssignCheck.h  UselessCastCheck.cpp  UselessCastCheck.h
lib/common/comparison/: BoolComparisonCheck.cpp  BoolComparisonCheck.h  CMakeLists.txt  FloatComparisonCheck.cpp  FloatComparisonCheck.h  IntegerComparisonCheck.cpp  IntegerComparisonCheck.h  (+4 more)
lib/matchers/: CMakeLists.txt  compose.h  matcher.h  predicate.h
lib/utils/: CFGVariableUseTracker.cpp  CFGVariableUseTracker.h  CMakeLists.txt  RawPointerDeallocTracker.h  RawPointerUseTracker.h
utest/: CMakeLists.txt
utest/helper/: CMakeLists.txt  run.h
utest/matcher/: CMakeLists.txt  MutableDeclRefTest.cpp
(+347 files in other folders)
