add_subdirectory(declaration)
add_subdirectory(formatting)
add_subdirectory(pointer)
add_subdirectory(branch)
add_subdirectory(jump)
add_subdirectory(operation)
add_subdirectory(function)
add_subdirectory(statement)
add_subdirectory(loop)
add_subdirectory(cast)
add_subdirectory(init)
add_subdirectory(comparison)
add_subdirectory(variable)